--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="tool-wrapper">
-      <button id="color_pick" class="jscolor {valueElement:null,value:'66ccff',onFineChange:'updateColor(this)'}"></button>
+      <button id="color_pick" class="jscolor {valueElement:null,value:'ff00ff',onFineChange:'updateColor(this)'}"></button>
       <div id="arrow"><span class="fa fa-chevron-right"></span></div>
       <div id="drawing-tools">
         Tool:
