--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/imp/animate.min.css">
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-    <script src="javascript/animatedModal.min.js"></script>
     <script src="javascript/jscolor.min.js"></script>
   </head>
   <body>
@@ -20,6 +19,14 @@
         <div class="tool selected" id="paint">Paint</div>
         <div class="tool" id="eraser">Eraser</div>
       </div>
+      <a id="settings-btn" href="#modal-02">
+        <div class="fa fa-cog"></div> Settings
+      </a>
+      <nav id="actions" class="dropdown">
+        <li disabled><div class="fa fa-chevron-down"></div> Actions </li>
+        <li class="action" onClick="actions.wipe()">Wipe</li>
+        <li class="action" onClick="actions.fill()">Fill</li>
+      </nav>
     </div>
     <canvas id="canvas"></canvas>
     <script src="javascript/app.js"></script>
