--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
       <a href="#" data-remodal-action="cancel" class="modal_btn modal-cancel">Cancel</a>
     </div>
     <div class="modal_window remodal" data-remodal-id="wipe-confirmation">
+      <div class="modal_content">
+        <p>
+          Are you sure you want to wipe the whole board? That will delete everything that you have been drawing with no chance to undo.
+        </p>
+      </div>
       <a href="#" data-remodal-action="confirm" class="modal_btn modal-confirm" onClick="actions.wipe()">Wipe</a>
       <a href="#" data-remodal-action="cancel" class="modal_btn modal-cancel">Cancel</a>
     </div>
