--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         Tool:
         <div class="tool selected" id="paint">Paint</div>
         <div class="tool" id="eraser">Eraser</div>
+        <div class="tool" id="eyedropper">Eyedropper</div>
       </div>
       <a href="#" id="settings-btn" class="remodals" data-remodal-target="modal-settings">
         <div class="fa fa-cog"></div> Settings
