--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="tool-wrapper">
-      <button id="color_pick" class="jscolor {valueElement:null,value:'ff00ff',onFineChange:'updateColor(this)'}"></button>
+      <button id="color_pick" class="jscolor {valueElement:null,value:'ff0000',onFineChange:'updateColor(this)'}"></button>
       <div id="arrow"><span class="fa fa-chevron-right"></span></div>
       <nav id="drawing-tools">
         <p><span class="fa fa-chevron-down" style="margin-right: 8px"></span>  Tools: </p>
